external-crates/move/crates/move-package-alt/tests/data/too_many_entries_renaming_instantiation/Move@parsed.snap
---
source: crates/move-package-alt/tests/test_runner.rs
---
error: Error while loading `"tests/data/too_many_entries_renaming_instantiation/Move.toml"`
  ┌─ "tests/data/too_many_entries_renaming_instantiation/Move.toml":6:34
  │
6 │ A = { local = "a", rename-from = { A = { B = "0x1", R = "0x2" } } }
  │                                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  │
  = invalid type: map, expected a string
